static/main.css
/*mobile viewing*/

body {
    font-size: 1.2rem;
    margin: 0;
    padding: 0;
    font-family: Arial, Helvetica, sans-serif;
    background-image: url(/flat-mountains.svg);
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    list-style-type: none;
}

ul{
    list-style-type: none;
}
.project-img {
    height: 200px;
    width: 200px;
    margin: 50 auto;
    display: block;
}

.project-card {
    /*display: flex;
    flex-direction: column;
    align-items: center; /* Centers items on the cross-axis (horizontal centering) */
    justify-content: center; /* Centers items on the main-axis (vertical centering) */
    /*height: 300px; /* or whatever height you prefer */
    /*width: 200px; /* or whatever width you prefer */
    /*border: 1px solid #ccc; /* optional, for visualization */
    padding: 50px; /* some space around the content */
    margin: 10px; /* some space between the cards */
}


.topnav {
    background-color: black;
}


.navbar {
    background-color: #283747;
    height: 130px;
    padding-bottom: 0;
}

.navbar a:hover {
    opacity: 0.5;
}



.main-nav {
    display: none;
    list-style-type: none;
    flex-direction: column;
}

.active {
    display: block;
    text-align: center;
    list-style-type: none;
    background-color: #283747;
    margin: 0;
    padding-bottom: 20px;
    padding-inline-start: 0px;
}

.main-nav li {
    text-align: center;
    margin: 15px auto;
}

.nav-link, .logo {
    text-decoration: none;
    padding-bottom: 18px;
}

.logo {
    display: inline-block;
    height: 100px;
    width: 100px;
    padding-bottom: 5px;
    margin-left: 5px;
}

a {
    text-decoration: none;
    color: #eee8aa;
}

h2{
    justify-content: center;
    position: relative;
}



.navbar-toggle {
    position: absolute;
    top: 27px;
    right: 20px;
    cursor: pointer; 
    color: rgba(255,255,255,0.8);
    font-size: 24px;
}

.navbar-toggle i:hover {
    opacity: 0.5;
}

.my-pic {
    display: none;
    position: absolute;
    text-align: center;
    height: 90%;
    width: 65%;
    margin: 140px 200px 200px 50px;
    border: 3mm ridge #9ab973;

}

.intro{
    position: absolute;
    margin-top: 1rem;
    margin-left: 36%;
    margin-right: 42%;

}

/*DESKTOP CSS*/
@media screen and (min-width: 768px) {

    body {
        font-size: 1.35rem;
        margin: 0;
        padding: 0;
        font-family: Arial, Helvetica, sans-serif;
        background-image: url(/flat-mountains.svg);
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-size: cover;
    }
    
    .navbar {
        display: flex;
        justify-content: space-between;
        align-items: center;
        height: 80px;
    }

    .main-nav {
        display: flex;
        margin: 40px;
        padding: 10px;
        flex-direction: row;
        justify-content: flex-end;
    }

    .navbar-toggle {
        display: none;
    }

    .nav-link {
        padding: 18px;
    }

    .my-pic {
        /*MIGHT CHANGE*/
        display: none;
        margin-left: 70px;
        position: absolute;
        height: 90%;
        width: 35%;
        border: 3mm ridge #9ab973;
    }

    .intro {
        /*KEEP WORKING ON THIS THE TEXT ISNT CENTERED*/
        margin-left: 40%;
        margin-right: 41%;
        padding-right: 10px;
        padding-left: 10px;
        display: inline;
        text-align: center;
    }

    .project-img {
        height: 200px;
        width: 200px;
        margin: 50 auto;
        display: block;
    }
    
    .project-card {
        /*display: flex;
        flex-direction: column;
        align-items: center; /* Centers items on the cross-axis (horizontal centering) */
        justify-content: center; /* Centers items on the main-axis (vertical centering) */
        /*height: 300px; /* or whatever height you prefer */
        /*width: 200px; /* or whatever width you prefer */
        /*border: 1px solid #ccc; /* optional, for visualization */
        padding: 50px; /* some space around the content */
        margin: 10px; /* some space between the cards */
    }
    
    ul{
        list-style-type: none;
    }

    .about-container {
        max-width: 1000px;
        margin: 40px auto;
        padding: 20px;
        /*background-color: #ffffff;*/
        /*box-shadow: 0 0 10px rgba(0,0,0,0.1);*/
    }
    
    /* Profile images styling */
    .profile-images {
        display: flex;
        gap: 20px; /* space between images */
        justify-content: center; /* center the images horizontally */
        flex-wrap: wrap; /* allows images to wrap to the next row if there isn't enough space */
    }

    .profile-images img {
        max-width: 200px; /* or whatever size you prefer */
        border-radius: 10px;
        box-shadow: 0 0 10px rgba(0,0,0,0.1);
    }
    
    /* Text content styling */
    .about-text {
        text-align: center;
        margin-top: 30px;
    }
    
    .about-text h1 {
        font-size: 2em;
        color: black;
        margin-bottom: 20px;
    }
    
    .about-text p {
        font-size: 1em;
        color: black;
        line-height: 1.5;
    }

    .contact-container {
        max-width: 600px;
        margin: 40px auto;
        padding: 20px;
        text-align: center;
    }
    
    .form-group {
        margin-bottom: 20px;
    }
    
    label {
        display: block;
        margin-bottom: 10px;
        font-weight: bold;
    }
    
    input[type="text"], input[type="email"], textarea {
        width: 100%;
        padding: 10px;
        border: 1px solid #ccc;
        border-radius: 5px;
        font-size: 1em;
    }
    
    button {
        padding: 10px 15px;
        background-color: #007BFF;
        color: #ffffff;
        border: none;
        border-radius: 5px;
        cursor: pointer;
        font-size: 1em;
        transition: background-color 0.3s ease;
    }
    
    button:hover {
        background-color: #0056b3;
    }
    
    .additional-info {
        margin-top: 30px;
    }
    
    .skills-list {
        list-style-type: none; /* Removes bullet points */
        padding-left: 0;
        display: flex;
        flex-wrap: wrap; /* Allows list items to wrap to next line if there's no space */
        gap: 15px; /* Spacing between items */
    }
    
    .skills-list li {
        background-color: #f4f4f4; /* Light grey background */
        padding: 8px 15px;
        border-radius: 5px;
        font-weight: 500; /* Makes text slightly bold */
    }
}

